--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ body {
   overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
+.app-footer {
+  text-align: center;
+  padding: 1rem;
+  font-size: 0.8rem;
+  color: #666;
+  margin-top: 2rem;
+}
+
 
 #completeJourneyForm {
   display: flex;
