--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
   padding: 1rem;
   font-size: 0.8rem;
   color: #666;
-  margin-top: 2rem;
+  margin-top: -1rem;
+    margin-left: 3rem;
 }
 
 
